[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locache"
version = "3.0.0"
description = "Cache expensive function calls to disk."
readme = "README.md"
authors = [{ name = "John Gardner", email = "gardner.john97@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cache", "disk"]
dependencies = ["astor"]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "bumpver", "sphinx", "furo"]

[project.urls]
Homepage = "https://github.com/jla-gardner/locache"

[tool.bumpver]
current_version = "3.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"locache/__init__.py" = ["{version}"]
