[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locache"
version = "4.0.0"
description = "Cache expensive function calls to disk."
readme = "README.md"
authors = [{ name = "John Gardner", email = "gardner.john97@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cache", "disk"]
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
dev = ["bumpver", "ruff"]
publish = ["twine", "build"]

[project.urls]
Homepage = "https://github.com/jla-gardner/locache"

[tool.bumpver]
current_version = "4.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"locache.py" = ["{version}"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"


# allow for coverage to find relevant files in both . and */site-packages
# so that we can install the package both normally and in editable mode, and 
# still get coverage for both cases using `pytest --cov`
[tool.coverage.paths]
source = [".", "*/site-packages"]